Revision history for Perl extension XML::Xalan.

Nov 7, 2001
- Major restructuring. 
- Added SAX2 content handler support. 

Oct 25, 2001
- Memory leak in external function plumbed!!
- Fixed install_external_function() to save a copy of sub

Oct 23, 2001
- Added uninstall_external_function()
- XML::Xalan and XML::Xerces::ParserLiaison are removed.
- Fixed coredump upon external function failures
- Added external function support!
- Added tests

Oct 22, 2001
- Improved docs
- Added test for stylesheet param
- Fixed set_stylesheet_param retval.
- Added driver for MSERGEANT's benchmark script

Oct 20, 2001
- Added PI support
- Much improved XML::Xalan::Transformer module. Now covers most of the new 
  XalanTransformer class' API!

Oct 19, 2001
- Updated to work with Xalan 1.2

0.01  Mon Mar 26 16:15:57 2001
	- original version; created by h2xs 1.19
