@@ -4,18 +4,27 @@ XML::Xalan::DocumentBuilder - Provides Perl SAX2 handlers
 
 =head1 SYNOPSIS
 
+  use XML::Xalan;
+  ...
+  
   my $doc_builder = $tr->create_document_builder();
   my $parser = AnySAX2Parser->new(
       Handler => $doc_builder->get_content_handler()
   );
+  
+  # fires SAX2 events..
+  $parser->parse_file($file);
+
+  # then transform the document builder object..
   $tr->transform_to_file($doc_builder, $xsl, $output);
 
 =head1 DESCRIPTION
 
 This class provides Perl SAX2 handlers, so an C<XML::Xalan::Transformer> object can transform
-input source generated by any Perl SAX 2.0 conformant parser.
+input source parsed by B<any Perl SAX 2.0 conformant parser>.
 
-Currently it only supports content handler. 
+Currently supported handlers are content handler, dtd handler, and lexical
+handler. 
 
 =head1 METHODS
 
@@ -25,29 +34,41 @@ Currently it only supports content handler.
 
 Returns an C<XML::Xalan::ContentHandler> object.
 
+=item $doc_builder->get_dtd_handler()
+
+Returns an C<XML::Xalan::DTDHandler> object.
+
+=item $doc_builder->get_lexical_handler()
+
+Returns an C<XML::Xalan::LexicalHandler> object.
+
 =back
 
-=head1 BUGS
+=head1 REUSABILITY
 
-C<XML::Xalan::DocumentBuilder> object is B<not reusable>. This means the following code won't work:
+C<XML::Xalan::DocumentBuilder> object is only reusable with the B<same input
+source>. This means the following snippet won't work:
 
- my $db = $tr->create_document_builder();
- my $ch = $db->get_content_handler();
-
- # any SAX2 - conformant parser:
- my $p = XML::SAX::PurePerl->new(
-     Handler => $ch
- );
-
- # reuse the document builder:
+ # reuse the document builder with different input sources:
  for (1..100) {
-     $p->parse_file(IO::File->new("$_.xml"));
+     $p->parse_uri("$_.xml");
      my $res = $tr->transform_to_file($db, "foo.xsl", "$_.out");
  }
 
-=head1 TODO
+This is not a bug, as it is imposed by the underlying C++ implementation. 
 
-Implement other handlers as well.
+Thus, for different input sources, you should recreate the document builder and parser object for each of them:
+
+ for (1..100) {
+     my $db = $tr->create_document_builder();
+     my $p = XML::SAX::PurePerl->new(
+         Handler => $db->get_content_handler();
+     );
+
+     $p->parse_uri("$_.xml");
+     my $res = $tr->transform_to_file($db, "foo.xsl", "$_.out");
+     $tr->destroy_document_builder($db);
+ }
 
 =head1 AUTHOR
 
